banner section update

--- a/index.html
+++ b/index.html
@@ -95,22 +95,28 @@
                 </div>
             </div>
             <div class="flex flex-wrap mt-16 lg:mt-0 lg:flex-nowrap justify-center gap-6 lg:relative bottom-[70px]">
-                <div class="flex lg:w-1/4 bg-white border border-b-4 border-b-[#1DD100] p-8 gap-4 rounded-3xl">
-                    <img src="images/people.png" alt="">
+                <div class="flex lg:w-80 bg-white border border-b-4 border-b-[#1DD100] p-8 gap-4 rounded-3xl">
+                    <div>
+                        <img class="w-full" src="images/people.png" alt="">
+                    </div>
                     <div>
                         <h3 class="inter text-4xl font-bold text-[#030712]">500K+</h3>
                         <p class="text-[#03071299] inter text-lg">Registered users</p>
                     </div>
                 </div>
-                <div class="flex lg:w-1/4 bg-white border border-b-4 border-b-[#1DD100] p-8 gap-4 rounded-3xl">
-                    <img src="images/ticket-cupon.png" alt="">
+                <div class="flex lg:w-80 bg-white border border-b-4 border-b-[#1DD100] p-8 gap-4 rounded-3xl">
+                    <div>
+                        <img class="w-full" src="images/ticket-cupon.png" alt="">
+                    </div>
                     <div>
                         <h3 class="inter text-4xl font-bold text-[#030712]">1.7 lacks</h3>
                         <p class="text-[#03071299] inter text-lg">Tickets sold</p>
                     </div>
                 </div>
-                <div class="flex lg:w-1/4 bg-white border border-b-4 border-b-[#1DD100] p-8 gap-4 rounded-3xl">
-                    <img src="images/people.png" alt="">
+                <div class="flex lg:w-80 bg-white border border-b-4 border-b-[#1DD100] p-8 gap-4 rounded-3xl">
+                    <div>
+                        <img class="w-full" src="images/stoppage.png" alt="">
+                    </div>
                     <div>
                         <h3 class="inter text-4xl font-bold text-[#030712]">80K+</h3>
                         <p class="text-[#03071299] inter text-lg">Rental partners</p>
